--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
     background-image: url(/background2.jpg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
     position: fixed;
     margin-top: 4rem;
     opacity: .4;
@@ -50,11 +50,11 @@
   h1 {
     line-height: 1;
     font-size: clamp(34px, 4vw, 64px);
-    font-weight: 800;
+    font-weight: 600;
   }
 
   h2 {
-    font-weight: 800;
+    font-weight: 600;
     line-height: 1.4;
     font-size: clamp(24px, 8vw, 86px);
   }
@@ -381,8 +381,10 @@
     width: 90%;
   }
 
-  h1 {
+  h1,
+  h2 {
     line-height: 1.2;
+    font-weight: 800;
   }
 
   .project-holder {
@@ -432,5 +434,11 @@
 
   .splash-title-holder {
     gap: 2.5rem;
+  }
+}
+
+@media (min-width: 1499px) {
+  .background {
+    background-size: 100% 100%;
   }
 }
