--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
   .background {
     width: 100%;
     height: 100vh;
-    background-image: url(/background2.jpg);
+    background-image: url(/background.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     /* background-size: 100% 100%; */
