--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,14 +49,15 @@
 
   h1 {
     line-height: 1;
-    font-size: clamp(34px, 4vw, 64px);
-    font-weight: 600;
+    font-size: clamp(24px, 8vw, 86px);
+    font-weight: 300;
   }
 
   h2 {
-    font-weight: 600;
     line-height: 1.4;
-    font-size: clamp(24px, 8vw, 86px);
+    font-size: clamp(24px, 8vw, 48px);
+    font-weight: 300;
+    color: #007FFF;
   }
 
   p {
@@ -94,14 +95,16 @@
     top: 2rem;
     transition: 0.3s;
     width: 100%;
-    z-index: 3;
+    z-index: 4;
   }
 
   .nav-holder {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 95%;
+
+    width: 85%;
   }
 
   .nav-slider {
@@ -129,8 +132,6 @@
     align-items: center;
     gap: 1rem;
     height: 3rem;
-    /* padding-left: 0.25rem;
-    padding-right: 0.25rem; */
   }
 
   .nav-links {
@@ -166,11 +167,10 @@
 
   .container-holder {
     position: relative;
-    /* animation: fade 500ms ease-in-out forwards; */
   }
 
   #fade {
-    animation: fade 500ms ease-in-out forwards;
+    animation: fade 750ms ease-in-out forwards;
   }
 
   @keyframes fade {
@@ -207,7 +207,6 @@
     padding: 2rem;
     border: 1px solid black;
     transition: 150ms linear;
-
     height: 18rem;
   }
 
@@ -268,6 +267,9 @@
   .container,
   .container-title {
     width: 95%;
+
+
+    width: 85%;
   }
 
   .container-title {
@@ -311,16 +313,26 @@
   }
 
   .test {
-    width: 95%;
-    height: 92.5vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 2rem;
-    background: #f5f5f560;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
+    background: #ffffff;
+    border-radius: 0rem;
+    border: 1px solid black;
+    border-top: 0px solid black;
+    width: 92.5%;
+    height: 95vh;
+  }
+
+  .test2 {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    border-radius: 0rem;
+    height: 8rem;
   }
 
   .splash-title-holder {
@@ -350,15 +362,16 @@
   }
 
   .footer-holder {
-    width: 95%;
     display: flex;
     justify-content: center;
     padding-block: 2rem;
-    border-radius: 2rem;
-    margin-bottom: 2rem;
-    background: #f5f5f560;
+    background: #f5f5f580;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
+    border-radius: 0rem;
+    border: 1px solid #f5f5f5;
+    margin-bottom: 6rem;
+    width: 85%;
   }
 
   .footer {
@@ -378,15 +391,12 @@
 }
 
 @media (min-width: 799px) {
-  .nav-holder {
-    justify-content: space-between;
+  /* .nav-holder {
     width: 90%;
-  }
+  } */
 
-  h1,
-  h2 {
+  h1 {
     line-height: 1.2;
-    font-weight: 800;
   }
 
   .project-holder {
