--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
   .background {
     width: 100%;
     height: 100vh;
-    background-image: url(/background.jpg);
+    background-image: url(/background.webp);
     background-position: center center;
     background-repeat: no-repeat;
     /* background-size: 100% 100%; */
@@ -227,8 +227,8 @@
     -webkit-backdrop-filter: blur(4px);
     background: rgba(255, 255, 255, 0.25);
     z-index: 3;
-    width: 85%;
-    height: 10rem;
+    width: 100%;
+    height: 12rem;
     bottom: 0;
     opacity: 1;
     transition: 150ms linear;
