--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,8 @@
     background-repeat: no-repeat;
     /* background-size: 100% 100%; */
     position: fixed;
-    margin-top: 4rem;
-    opacity: .4;
+    margin-top: 24rem;
+    opacity: .65;
     z-index: 1;
   }
 
@@ -61,20 +61,20 @@
   }
 
   p {
-    font-size: clamp(10px, 2vw, 12px);
+    font-size: clamp(12px, 2vw, 14px);
     font-weight: 400;
     line-height: 1.4;
   }
 
   span {
-    font-weight: 500;
-    font-size: clamp(14px, 2vw, 16px);
+    font-weight: 300;
+    font-size: clamp(18px, 2vw, 20px);
     line-height: 1.4;
   }
 
   a,
   button {
-    font-size: clamp(10px, 2vw, 12px);
+    font-size: clamp(12px, 2vw, 14px);
     font-weight: 500;
     line-height: 1.4;
     text-decoration: none;
@@ -107,10 +107,10 @@
 
   .nav-slider {
     position: absolute;
-    backdrop-filter: blur(8px) saturate(200%);
-    -webkit-backdrop-filter: blur(8px) saturate(200%);
-    background: #ffffff;
-    border: 1px solid black;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    border: 1px solid #e0e0e0;
+    background: #f5f5f520;
     height: 2.5rem;
     width: 6rem;
     z-index: 1;
@@ -136,6 +136,7 @@
     display: flex;
     justify-content: center;
     gap: 0rem;
+    color: #007FFF;
 
     a,
     button {
@@ -197,21 +198,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
     background: #ffffff;
     overflow: hidden;
     max-width: auto;
     padding: 2rem;
-    border: 1px solid black;
     transition: 150ms linear;
     height: 18rem;
-
     width: 100%;
+    border: 1px solid #e0e0e0;
   }
 
   .project-name {
-    color: black;
+    color: #007FFF;
     transition: 150ms linear;
   }
 
@@ -228,7 +226,7 @@
     background: rgba(255, 255, 255, 0.25);
     z-index: 3;
     width: 100%;
-    height: 12rem;
+    height: 10rem;
     bottom: 0;
     opacity: 1;
     transition: 150ms linear;
@@ -270,7 +268,7 @@
   }
 
   .container-splash {
-    width: 85%;
+    width: 95%;
     margin-top: 40%;
   }
 
@@ -289,19 +287,6 @@
     flex-wrap: wrap;
   }
 
-  .test {
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ffffff;
-    border-radius: 0rem;
-    border: 1px solid black;
-    border-top: 0px solid black;
-    width: 92.5%;
-    height: 95vh;
-  }
-
   .logo {
     display: none;
   }
@@ -309,13 +294,13 @@
   .footer-holder {
     display: flex;
     justify-content: center;
-    padding-block: 2rem;
-    background: #f5f5f580;
+    padding-block: 1.5rem;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    border: 1px solid #f5f5f5;
-    margin-bottom: 6rem;
-    width: 85%;
+    border: 1px solid #e0e0e0;
+    background: #f5f5f520;
+    margin-bottom: 4rem;
+    width: 95%;
   }
 
   .footer {
@@ -372,6 +357,13 @@
 
   .logo {
     display: block;
+    font-size: clamp(18px, 2vw, 20px);
+    font-weight: 300;
+    color: #007FFF;
+  }
+
+  .footer-holder {
+    width: 90%;
   }
 
   .footer {
@@ -386,7 +378,7 @@
 
   .container-splash {
     width: 80%;
-    margin-top: 12%;
+    margin-top: 8%;
   }
 }
 
@@ -395,6 +387,10 @@
     max-width: 960px;
     width: 45%;
     padding: 3rem;
+  }
+
+  .social-btn-holder {
+    gap: 1rem 4rem;
   }
 }
 
