--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,13 +49,13 @@
 
   h1 {
     line-height: 1;
-    font-size: clamp(32px, 6vw, 96px);
+    font-size: clamp(28px, 6vw, 96px);
     font-weight: 300;
   }
 
   h2 {
     line-height: 1.4;
-    font-size: clamp(24px, 8vw, 48px);
+    font-size: clamp(20px, 4vw, 48px);
     font-weight: 300;
     color: #007FFF;
   }
@@ -102,7 +102,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
-    width: 85%;
+    width: 95%;
   }
 
   .nav-slider {
@@ -279,7 +279,7 @@
   }
 
   .social-btn-holder {
-    gap: 1rem 2rem;
+    gap: 1rem 1rem;
     display: flex;
     width: fit-content;
     justify-content: center;
@@ -291,10 +291,13 @@
     display: none;
   }
 
+  .break {
+    display: block;
+  }
+
   .footer-holder {
     display: flex;
     justify-content: center;
-    padding-block: 1.5rem;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     border: 1px solid #e0e0e0;
@@ -307,15 +310,17 @@
     width: 95%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 1rem 2rem;
     flex-direction: column;
+    padding: 1rem;
+    padding-block: 1.5rem;
 
-    a,
+    /* a,
     p {
       text-align: right;
-    }
+    } */
   }
 
   .embed-responsive {
@@ -362,6 +367,10 @@
     color: #007FFF;
   }
 
+  .break {
+    display: none;
+  }
+
   .footer-holder {
     width: 90%;
   }
@@ -380,6 +389,10 @@
     width: 80%;
     margin-top: 8%;
   }
+
+  .social-btn-holder {
+    gap: 1rem 2rem;
+  }
 }
 
 @media (min-width: 999px) {
@@ -387,10 +400,6 @@
     max-width: 960px;
     width: 45%;
     padding: 3rem;
-  }
-
-  .social-btn-holder {
-    gap: 1rem 4rem;
   }
 }
 
