--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@
   a,
   button {
     font-size: clamp(12px, 2vw, 14px);
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.4;
     text-decoration: none;
     width: fit-content;
@@ -165,6 +165,20 @@
 
   .container-holder {
     position: relative;
+  }
+
+  #rotate {
+    animation: rotate 15s linear infinite;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
   }
 
   #fade {
@@ -278,7 +292,7 @@
   }
 
   .social-btn-holder {
-    gap: 1rem 2rem;
+    gap: 1rem 1rem;
     display: flex;
     width: fit-content;
     justify-content: center;
@@ -288,10 +302,6 @@
 
   .logo {
     display: none;
-  }
-
-  .break {
-    display: block;
   }
 
   .footer-holder {
@@ -308,11 +318,11 @@
   .footer {
     width: 95%;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     gap: 1rem 2rem;
-    flex-direction: column;
+    flex-direction: row;
     padding: 1rem;
     padding-block: 1.5rem;
   }
@@ -357,17 +367,12 @@
     color: #007FFF;
   }
 
-  .break {
-    display: none;
-  }
-
   .footer-holder {
     width: 90%;
   }
 
-  .footer {
-    justify-content: space-between;
-    flex-direction: row;
+  .social-btn-holder {
+    gap: 1rem 2rem;
   }
 
   .container,
