--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,8 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
-    z-index: 2;
-    color: black;
+    z-index: 3;
+    color: rgb(36, 36, 36);
   }
 
   .background {
@@ -26,19 +26,18 @@
     background-image: url(/background.webp);
     background-position: center center;
     background-repeat: no-repeat;
-    /* background-size: 100% 100%; */
-    position: fixed;
-    margin-top: 18rem;
-    opacity: .65;
+    position: absolute;
+    margin-top: 24rem;
+    opacity: .4;
     z-index: 1;
   }
 
   .overlay {
     background: rgba(255, 255, 255, 0.85);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
   }
 
   button {
@@ -49,14 +48,20 @@
 
   h1 {
     font-size: clamp(28px, 6vw, 96px);
+    font-size: clamp(28px, 6vw, 60px);
     font-weight: 300;
   }
 
   h2 {
-    line-height: 1.4;
-    font-size: clamp(20px, 4vw, 48px);
+    line-height: 1.6;
+    font-size: clamp(20px, 4vw, 34px);
     font-weight: 300;
-    color: #007FFF;
+  }
+
+  h3 {
+    font-size: clamp(20px, 2vw, 26px);
+    line-height: 1.4;
+    font-weight: 300;
   }
 
   p {
@@ -66,9 +71,9 @@
   }
 
   span {
-    font-weight: 300;
+    font-weight: 500;
     font-size: clamp(18px, 2vw, 20px);
-    line-height: 1.4;
+    line-height: 1.2;
   }
 
   a,
@@ -87,6 +92,48 @@
     opacity: 0.4;
   }
 
+  .button {
+    background: rgb(36, 36, 36);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 100rem;
+    transition: 300ms ease;
+  }
+
+  .button:hover {
+    opacity: 0.85;
+    transform: translateY(-5px);
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    border: 0px;
+    background: #00000006;
+    padding: 1rem;
+    border-radius: 1rem;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+  }
+
+  input:focus,
+  textarea:focus {
+    outline: none;
+  }
+
+
+  form {
+    width: 100%;
+    margin-bottom: 4rem;
+    flex-direction: column;
+    gap: 0.4rem;
+  }
+
   .nav {
     display: flex;
     justify-content: center;
@@ -97,21 +144,14 @@
     z-index: 4;
   }
 
-  .nav-holder {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    width: 95%;
-  }
-
   .nav-slider {
     position: absolute;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
-    border: 1px solid #e0e0e0;
-    background: #f5f5f520;
+    background: #00000006;
     height: 2.5rem;
     width: 6rem;
+    border-radius: 100rem;
     z-index: 1;
     transition: transform 0.3s ease;
   }
@@ -121,21 +161,18 @@
     justify-content: center;
     align-items: center;
     min-width: fit-content;
-  }
-
-  .nav-sub {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    height: 3rem;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    border-radius: 100rem;
+    padding: .25rem;
+    padding-block: 0rem;
+    background: #00000006;
   }
 
   .nav-links {
     display: flex;
     justify-content: center;
     gap: 0rem;
-    color: #007FFF;
 
     a,
     button {
@@ -167,18 +204,11 @@
     position: relative;
   }
 
-  #rotate {
-    animation: rotate 15s linear infinite;
-  }
-
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
+  .container-services {
+    display: flex;
+    width: 100%;
+    gap: 0.4rem;
+    flex-wrap: wrap;
   }
 
   #fade {
@@ -198,7 +228,7 @@
   }
 
   .project-holder {
-    gap: 1rem 2rem;
+    gap: 0.4rem;
     align-items: flex-start;
     width: 95%;
     margin-bottom: 4rem;
@@ -211,19 +241,27 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: #ffffff;
+    background: #00000006;
     overflow: hidden;
     max-width: auto;
     padding: 2rem;
     transition: 150ms linear;
     height: 18rem;
+    border-radius: 2rem;
     width: 100%;
-    border: 1px solid #e0e0e0;
   }
 
-  .project-name {
-    color: #007FFF;
-    transition: 150ms linear;
+  .project-btn {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #00000006;
+    border-radius: 100rem;
+    width: 2.5rem;
+    aspect-ratio: 1/1;
   }
 
   .img-holder {
@@ -232,40 +270,15 @@
     justify-content: center;
   }
 
-  .overlay-img {
-    position: absolute;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    background: rgba(255, 255, 255, 0.25);
-    z-index: 3;
-    width: 100%;
-    height: 10rem;
-    bottom: 0;
-    opacity: 1;
-    transition: 150ms linear;
-  }
-
   .img {
     max-width: 85%;
     margin-top: 3rem;
     transform: translateY(20%);
-    border: 1px solid whitesmoke;
     transition: 300ms ease-out;
   }
 
   .project:hover {
-    border: 1px solid #007FFF;
     transition: 150ms linear;
-
-    .project-name {
-      color: #007FFF;
-      transition: 150ms linear;
-    }
-
-    .overlay-img {
-      opacity: 0;
-      transition: 150ms linear;
-    }
 
     .img {
       box-shadow: #00000008 0px 0px 20px 4px;
@@ -282,13 +295,13 @@
 
   .container-splash {
     width: 95%;
-    margin-top: 50%;
+    text-align: center;
   }
 
   .container-title {
     padding-top: 8rem;
     padding-bottom: 2rem;
-    text-align: left;
+    text-align: center;
   }
 
   .social-btn-holder {
@@ -300,18 +313,14 @@
     flex-wrap: wrap;
   }
 
-  .logo {
-    display: none;
-  }
-
   .footer-holder {
     display: flex;
     justify-content: center;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    border: 1px solid #e0e0e0;
-    background: #f5f5f520;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    background: #00000006;
     margin-bottom: 4rem;
+    border-radius: 1rem;
     width: 95%;
   }
 
@@ -348,28 +357,19 @@
       transform: translateY(-2.5%);
     }
   }
+
+  form {
+    width: 450px;
+  }
 }
 
 @media (min-width: 799px) {
-  .nav-holder {
-    justify-content: space-between;
-  }
-
   .project-holder {
-    gap: 2rem 2rem;
     justify-content: center;
-  }
-
-  .logo {
-    display: block;
-    font-size: clamp(18px, 2vw, 20px);
-    font-weight: 300;
-    color: #007FFF;
   }
 
   .footer-holder {
     width: 90%;
-    margin-bottom: 0rem;
   }
 
   .social-btn-holder {
@@ -383,7 +383,6 @@
 
   .container-splash {
     width: 80%;
-    margin-top: 8%;
   }
 }
 
@@ -391,7 +390,12 @@
   .project {
     max-width: 960px;
     width: 45%;
+    height: 400px;
     padding: 3rem;
+  }
+
+  .container-services {
+    width: 65%;
   }
 }
 
