--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,19 +47,18 @@
   }
 
   h1 {
-    font-size: clamp(28px, 6vw, 96px);
     font-size: clamp(28px, 6vw, 60px);
     font-weight: 300;
   }
 
   h2 {
     line-height: 1.6;
-    font-size: clamp(20px, 4vw, 34px);
+    font-size: clamp(18px, 4vw, 34px);
     font-weight: 300;
   }
 
   h3 {
-    font-size: clamp(20px, 2vw, 26px);
+    font-size: clamp(16px, 2vw, 26px);
     line-height: 1.4;
     font-weight: 300;
   }
@@ -72,7 +71,7 @@
 
   span {
     font-weight: 500;
-    font-size: clamp(18px, 2vw, 20px);
+    font-size: clamp(16px, 2vw, 18px);
     line-height: 1.2;
   }
 
@@ -119,11 +118,13 @@
     border-radius: 1rem;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
+    transition: 300ms ease;
   }
 
   input:focus,
   textarea:focus {
     outline: none;
+    background: #00000010;
   }
 
 
@@ -165,7 +166,6 @@
     -webkit-backdrop-filter: blur(12px);
     border-radius: 100rem;
     padding: .25rem;
-    padding-block: 0rem;
     background: #00000006;
   }
 
@@ -211,6 +211,16 @@
     flex-wrap: wrap;
   }
 
+  .services {
+    width: 49%;
+    background: #00000006;
+    padding: 2rem;
+    border-radius: 1rem;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    text-align: left;
+  }
+
   #fade {
     animation: fade 750ms ease-in-out forwards;
   }
@@ -253,8 +263,8 @@
 
   .project-btn {
     position: absolute;
-    right: 2rem;
-    top: 2rem;
+    right: 1rem;
+    top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -272,8 +282,7 @@
 
   .img {
     max-width: 85%;
-    margin-top: 3rem;
-    transform: translateY(20%);
+    margin-top: 1.5rem;
     transition: 300ms ease-out;
   }
 
@@ -327,7 +336,7 @@
   .footer {
     width: 95%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem 2rem;
@@ -349,6 +358,7 @@
 
 @media (min-width: 499px) {
   .img {
+    margin-top: 3rem;
     transform: translateY(2.5%);
   }
 
@@ -370,6 +380,10 @@
 
   .footer-holder {
     width: 90%;
+  }
+
+  .footer {
+    justify-content: space-between;
   }
 
   .social-btn-holder {
