--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,8 @@
     text-decoration: none;
     width: fit-content;
     display: flex;
+    justify-content: center;
+    align-items: center;
     transition: 150ms linear;
   }
 
