--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,11 @@
     box-sizing: border-box;
     z-index: 3;
     color: rgb(36, 36, 36);
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    text-wrap: pretty;
   }
 
   .background {
@@ -197,22 +202,19 @@
     }
   }
 
-  .tag-holder {
+  .detail {
+    opacity: 0;
+    width: 12rem;
+    margin-top: 1rem;
+    height: 2.5rem;
     display: flex;
-    flex-wrap: wrap;
-    gap: 0.4rem;
-    position: absolute;
-    left: 1rem;
-    bottom: 1rem;
-  }
-
-  .tag {
-    padding: 1rem;
-    padding-block: 0.4rem;
+    align-items: center;
+    justify-content: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #00000006;
-    color: black;
+    background: #ffffff40;
+    color: white;
+    transition: 300ms ease-out;
   }
 
   .container-holder,
@@ -275,6 +277,17 @@
     justify-content: center;
   }
 
+  .project-title {
+    position: absolute;
+    left: 2rem;
+    bottom: 2rem;
+    z-index: 4;
+
+    p {
+      display: none;
+    }
+  }
+
   .project {
     position: relative;
     display: flex;
@@ -298,7 +311,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #00000006;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    background: #ffffff40;
     width: 2.5rem;
     aspect-ratio: 1/1;
     z-index: 4;
@@ -306,15 +321,18 @@
 
   .img {
     width: 100%;
-    transition: 300ms ease-out;
+    transition: 500ms ease-out;
   }
 
   .project:hover {
     transition: 150ms linear;
 
     .img {
-      scale: 1.05;
-      transition: 300ms ease-out;
+      scale: 1.1;
+    }
+
+    .detail {
+      opacity: 1;
     }
   }
 
@@ -334,14 +352,14 @@
   }
 
   .social-btn-holder {
-    gap: 0.4rem;
+    gap: 1rem;
     display: flex;
     width: fit-content;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 
-    a {
+    /* a {
       width: 3rem;
       aspect-ratio: 1/1;
       background: rgb(36, 36, 36);
@@ -351,7 +369,7 @@
     a:hover {
       opacity: 0.85;
       transform: translateY(-5px);
-    }
+    } */
   }
 
   .footer-holder {
@@ -404,6 +422,15 @@
 
   .container {
     width: 80%;
+  }
+
+  .project-title {
+    left: 4rem;
+    bottom: 4rem;
+
+    p {
+      display: flex;
+    }
   }
 }
 
