--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,6 +103,7 @@
   .button,
   .button-light {
     background: rgb(36, 36, 36);
+    border: 1px solid rgb(36, 36, 36);
     color: white;
     display: flex;
     justify-content: center;
@@ -118,6 +119,7 @@
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     background: #f5f5f540;
+    border: 1px solid #f5f5f5;
   }
 
   .button:hover,
@@ -133,6 +135,7 @@
     width: 100%;
     border: 0px;
     background: #f5f5f540;
+    border: 1px solid #f5f5f5;
     padding: 1rem;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
@@ -142,7 +145,6 @@
   input:focus,
   textarea:focus {
     outline: none;
-    background: #f5f5f5;
   }
 
   ::placeholder {
@@ -189,16 +191,18 @@
     justify-content: center;
     align-items: center;
     min-width: fit-content;
-    backdrop-filter: blur(8px);
+    /* backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    /* padding: .25rem; */
     background: #f5f5f540;
+    border: 1px solid #f5f5f5; */
+    /* padding: .25rem; */
   }
 
   .nav-links {
     display: flex;
     justify-content: center;
-    gap: 0rem;
+    /* gap: 0rem; */
+    gap: 0.4rem;
 
     a,
     button {
@@ -222,6 +226,7 @@
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     background: #f5f5f540;
+    border: 1px solid #f5f5f5;
     color: white;
     transition: 300ms ease-out;
   }
@@ -246,8 +251,8 @@
   }
 
   .toggle-holder {
-    position: sticky;
-    top: 2rem;
+    position: fixed;
+    bottom: -2rem;
     z-index: 4;
   }
 
@@ -270,6 +275,7 @@
   .services {
     width: 100%;
     background: #f5f5f540;
+    border: 1px solid #f5f5f5;
     padding: 2rem;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
@@ -304,7 +310,7 @@
   .project-title {
     position: absolute;
     left: 2rem;
-    bottom: 2rem;
+    bottom: 4rem;
     z-index: 4;
 
     p {
@@ -326,6 +332,7 @@
     padding: 2rem;
     transition: 150ms linear;
     width: 100%;
+    border: 1px solid #f5f5f5;
   }
 
   .project-btn {
@@ -338,18 +345,20 @@
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     background: #f5f5f540;
+    border: 1px solid #f5f5f5;
     width: 2.5rem;
     aspect-ratio: 1/1;
     z-index: 4;
   }
 
   .img {
-    width: 100%;
+    width: 140%;
+    max-height: 750px;
+    object-fit: cover;
     transition: 500ms ease-out;
   }
 
   .project:hover {
-    background: #f5f5f5;
     transition: 150ms linear;
 
     .img {
@@ -403,7 +412,8 @@
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
     background: #f5f5f540;
-    margin-bottom: 4rem;
+    border: 1px solid #f5f5f5;
+    margin-bottom: 6rem;
     width: 90%;
   }
 
@@ -442,12 +452,19 @@
     right: 2rem;
   }
 
+  .toggle-holder {
+    position: sticky;
+    top: 2rem;
+    z-index: 4;
+  }
+
   .toggle-btn-holder {
     justify-content: left;
   }
 
   .footer-holder {
     width: 90%;
+    margin-bottom: 4rem;
   }
 
   .footer {
@@ -460,7 +477,6 @@
 
   .project-title {
     left: 4rem;
-    bottom: 4rem;
 
     p {
       display: flex;
