--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,8 +124,8 @@
 
   .button:hover,
   .button-light:hover {
-    opacity: 0.85;
-    transform: translateY(-5px);
+    opacity: 1;
+    transform: none;
   }
 
   input,
@@ -447,6 +447,13 @@
 }
 
 @media (min-width: 799px) {
+
+  .button:hover,
+  .button-light:hover {
+    opacity: 0.85;
+    transform: translateY(-5px);
+  }
+
   nav {
     width: fit-content;
     right: 2rem;
