--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
   }
 
   h1 {
-    font-size: clamp(28px, 6vw, 52px);
+    font-size: clamp(28px, 6vw, 54px);
     font-weight: 300;
     line-height: 1.2;
   }
@@ -100,8 +100,7 @@
     opacity: 0.4;
   }
 
-  .button,
-  .button-light {
+  .button {
     background: rgb(36, 36, 36);
     border: 1px solid rgb(36, 36, 36);
     color: white;
@@ -114,16 +113,7 @@
     transition: 300ms ease;
   }
 
-  .button-light {
-    color: rgb(36, 36, 36);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: #f5f5f540;
-    border: 1px solid #f5f5f5;
-  }
-
-  .button:hover,
-  .button-light:hover {
+  .button:hover {
     opacity: 1;
     transform: none;
   }
@@ -161,8 +151,12 @@
     gap: 0.4rem;
   }
 
+  .nav-mobile {
+    display: block;
+  }
+
   nav {
-    display: flex;
+    display: none;
     justify-content: center;
     position: fixed;
     top: 2rem;
@@ -180,8 +174,9 @@
   .nav-slider {
     position: absolute;
     background: rgb(36, 36, 36);
+    border: 1px solid rgb(36, 36, 36);
     height: 2.5rem;
-    width: 6rem;
+    width: 8rem;
     z-index: 1;
     transition: transform 0.3s ease;
   }
@@ -201,8 +196,7 @@
   .nav-links {
     display: flex;
     justify-content: center;
-    /* gap: 0rem; */
-    gap: 0.4rem;
+    gap: 0rem;
 
     a,
     button {
@@ -210,7 +204,7 @@
       align-items: center;
       justify-content: center;
       height: 2.5rem;
-      width: 6rem;
+      width: 8rem;
       z-index: 2;
     }
   }
@@ -370,10 +364,6 @@
     }
   }
 
-  .container {
-    width: 85%;
-  }
-
   .container-splash {
     text-align: left;
     width: 90%;
@@ -385,50 +375,6 @@
     width: 90%;
   }
 
-  .social-btn-holder {
-    gap: 1rem;
-    display: flex;
-    width: fit-content;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-
-    /* a {
-      width: 3rem;
-      aspect-ratio: 1/1;
-      background: rgb(36, 36, 36);
-      border-radius: 100rem;
-    }
-
-    a:hover {
-      opacity: 0.85;
-      transform: translateY(-5px);
-    } */
-  }
-
-  .footer-holder {
-    display: flex;
-    justify-content: center;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: #f5f5f540;
-    border: 1px solid #f5f5f5;
-    margin-bottom: 6rem;
-    width: 90%;
-  }
-
-  .footer {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem 2rem;
-    flex-direction: row;
-    padding: 1rem;
-    padding-block: 1.5rem;
-  }
-
   .embed-responsive {
     height: 100vh;
     width: 100vw;
@@ -438,23 +384,62 @@
       height: 100%;
     }
   }
+
+  footer {
+    width: 80%;
+    padding-block: 8rem;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    flex-wrap: wrap-reverse;
+    gap: 4rem 8rem;
+  }
+
+  .footerLinksHolder {
+    display: flex;
+    gap: 4rem;
+  }
+
+  .footerLinks {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  #footerLinksLeft {
+    padding-right: 2rem;
+  }
 }
 
 @media (min-width: 499px) {
   form {
     width: 500px;
   }
+
+  #footerLinksLeft {
+    padding-right: 4rem;
+  }
 }
 
 @media (min-width: 799px) {
+  #footerLinksLeft {
+    padding-right: 8rem;
+  }
 
-  .button:hover,
-  .button-light:hover {
+  .button:hover {
     opacity: 0.85;
     transform: translateY(-5px);
   }
 
+  .nav-mobile {
+    display: none;
+  }
+
   nav {
+    display: flex;
     width: fit-content;
     right: 2rem;
   }
@@ -469,29 +454,12 @@
     justify-content: left;
   }
 
-  .footer-holder {
-    width: 90%;
-    margin-bottom: 4rem;
-  }
-
-  .footer {
-    justify-content: space-between;
-  }
-
-  .container {
-    width: 80%;
-  }
-
   .project-title {
     left: 4rem;
 
     p {
       display: flex;
     }
-  }
-
-  .social-btn-holder {
-    gap: 2rem;
   }
 }
 
@@ -522,7 +490,8 @@
   }
 
   .container-title,
-  .container-splash {
+  .container-splash,
+  footer {
     width: 60%;
   }
 }
