--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
   }
 
   h1 {
-    font-size: clamp(28px, 6vw, 54px);
+    font-size: clamp(28px, 6vw, 3.5vw);
     font-weight: 300;
     line-height: 1.2;
   }
@@ -108,7 +108,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 10rem;
+    width: 12rem;
     height: 2.5rem;
     transition: 300ms ease;
   }
@@ -155,20 +155,20 @@
     display: block;
   }
 
+  .logo {
+    position: absolute;
+    top: 1.75rem;
+    left: 5%;
+  }
+
   nav {
     display: none;
     justify-content: center;
     position: fixed;
     top: 2rem;
+    right: 5%;
     transition: 0.3s;
-    width: 100%;
     z-index: 5;
-  }
-
-  .nav {
-    display: flex;
-    justify-content: center;
-    width: 95%;
   }
 
   .nav-slider {
@@ -186,11 +186,6 @@
     justify-content: center;
     align-items: center;
     min-width: fit-content;
-    /* backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: #f5f5f540;
-    border: 1px solid #f5f5f5; */
-    /* padding: .25rem; */
   }
 
   .nav-links {
@@ -439,14 +434,6 @@
 
   nav {
     display: flex;
-    width: fit-content;
-    right: 2rem;
-  }
-
-  .toggle-holder {
-    position: sticky;
-    top: 2rem;
-    z-index: 4;
   }
 
   .toggle-btn-holder {
@@ -460,13 +447,13 @@
       display: flex;
     }
   }
+
+  .logo {
+    top: 2rem;
+  }
 }
 
 @media (min-width: 999px) {
-  .nav {
-    justify-content: right;
-  }
-
   .project {
     padding: 4rem;
     max-width: 960px;
@@ -489,9 +476,21 @@
   }
 
   .container-title,
-  .container-splash,
-  footer {
+  .container-splash {
     width: 60%;
+  }
+
+  footer {
+    width: 80%;
+  }
+
+  .toggle-holder {
+    position: sticky;
+    top: 2rem;
+  }
+
+  .logo {
+    position: fixed;
   }
 }
 
